--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -2,3 +2,10 @@ general:
 steps:
   mtaBuild:
     buildTarget: 'CF'
+  cloudFoundryDeploy:
+    deployTool: 'mtaDeployPlugin'
+    deployType: 'standard'
+    cloudFoundry:
+      org: 'Korasoft GmbH'
+      space: 'TestSpace1'
+      credentialsId: 'CF_CREDENTIALSID'
